fix download spacing

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -207,8 +207,8 @@ label {
 
 #download {
   display: flex;
-  justify-content: left;
-margin-left: 20%;
+  justify-content: space-around;
+
   font-size: 100%;
 }
 
